--- a/scripts/PlayTicTac.ipynb
+++ b/scripts/PlayTicTac.ipynb
@@ -497,9 +497,9 @@
     "            if predicted_label == 0:\n",
     "                board_row.append(' ')  # Blank\n",
     "            elif predicted_label == 1:\n",
-    "                board_row.append('X')  # Nough\n",
+    "                board_row.append('X')  # Cross\n",
     "            elif predicted_label == 2:\n",
-    "                board_row.append('O')  # Circle\n",
+    "                board_row.append('O')  # Noughts\n",
     "\n",
     "        board.append(board_row)\n",
     "\n",
